--- a/package.json
+++ b/package.json
@@ -2,39 +2,53 @@
   "name": "spartan-gpa-calculator",
   "version": "1.0.0",
   "description": "GPA Calculator for Michigan State University Students",
-  "main": "index.js",
   "scripts": {
-    "watch": "webpack --config webpack/webpack.dev.js --watch",
-    "build": "webpack --config webpack/webpack.prod.js",
-    "clean": "rimraf dist",
-    "test": "npx jest",
-    "style": "prettier --write \"src/**/*.{ts,tsx}\""
+    "start": "webpack --watch --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "lint": "eslint --ext .ts,.js --max-warnings=0 .",
+    "prettier": "prettier --write"
   },
-  "author": "Andrew Secco",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/asecco/Spartan-GPA-Calculator"
+  "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/plugin-transform-runtime": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-typescript": "^7.16.5",
+    "@types/chrome": "^0.0.171",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.2.0",
+    "css-loader": "^6.5.1",
+    "dotenv-webpack": "^7.0.3",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.4",
+    "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^7.0.0",
+    "prettier": "^2.5.1",
+    "sass-loader": "^12.4.0",
+    "typescript": "^4.5.4",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@babel/runtime": "^7.16.5",
+    "normalize.css": "^8.0.1"
   },
-  "devDependencies": {
-    "@types/chrome": "0.0.158",
-    "@types/jest": "^27.0.2",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "copy-webpack-plugin": "^9.0.1",
-    "glob": "^7.1.6",
-    "jest": "^27.2.1",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2 ",
-    "ts-jest": "^27.0.5",
-    "ts-loader": "^8.0.0",
-    "typescript": "^4.4.3 ",
-    "webpack": "^5.61.0",
-    "webpack-cli": "^4.0.0",
-    "webpack-merge": "^5.0.0"
+  "browserslist": "> 0.25%, not dead",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "npm run prettier",
+      "npm run lint"
+    ]
   }
 }
