Testing initial install message

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,6 +3,9 @@
   "description": "GPA Calculator for Michigan State University Students",
   "version": "1.0.0",
   "manifest_version": 3,
+  "background": {
+    "service_worker": "serviceWorker.js"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
