Added help button with popup for instructions

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.16.5",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "sweetalert2": "^11.4.17"
   },
   "browserslist": "> 0.25%, not dead",
   "husky": {
