--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,11 +8,10 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
       "js": ["contentScript.js"]
     }
   ],
-  "permissions": ["storage", "scripting"],
+  "permissions": [],
   "action": {
     "default_title": "Spartan GPA Calculator",
     "default_popup": "popup.html",
